# security_courseworks

./: README.md
ICS_attackAndMonitor/: samplemonitor.py  traces_anomaly_attack_shutdown.txt  traces_attack_move_fill2.txt
ICS_attackAndMonitor/Task3Files/: plc.xml
ICS_attackAndMonitor/Task_2/: samplemonitor.py
Live_CTF1/: tanksim.py
Live_CTF1/Blue_Team_Defense/: monitor.py
adv_OS/KerFuzz/: KerFuzz_config.json  README.md  linux-6.2_config.txt
adv_ai/imitation_learning/: mountain_car_bc.py  mountain_car_bco.py  solution.md
adv_ai/q-learning-hw/: README.md  blackjack_play.py  blackjack_q_random.py  lunar_lander_DQN.py  lunar_lander_play.py  lunar_lander_random.py
adv_ai/solving-mdps/: LICENSE  README.md  homework3.py  mdp.py  mdp_utils.py
adv_compiler/bf_interpreter/: Readme.md
adv_compiler/llvm-pass-opt/: Readme.md
adv_compiler/spa_abstract_interp/: README.md  program.cpp
applied_software_sec/Harnessing_libarchive/: README.md  afl_harness.sh  afl_harness_binary.sh  afl_harness_local.sh  aflpp_libFuzz.sh  build_libarchive.sh  build_libarchive_cmake.sh  (+4 more)
applied_software_sec/cMakeSample/: CMakeLists.txt  README.md  driver.cpp  file.h  file1.cpp  file1.h
applied_software_sec/myCmakeDLL/: CMakeLists.txt  MyTest  README.md  file.cpp  myTest.cpp
buffer_overflow_attk/: README.md  Report.md  address.c  exploit1.c  exploit2.c  gdb_cmds  vulnerable1.c  vulnerable1.dis  vulnerable2.c
dafny_/: MergeSort.dfy  Untitled-1.dfy  insertion_srot.dfy  newMS.dfy  tried.dfy
lean_/: mergeSort.lean
proxy_server/: HTTPproxy.py  Readme.md  simple.html  w:oF.py
(+75 files in other folders)
